# fust

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
docs/: CI_OPTIMIZATION.md  GIT_WORKFLOW.md
fust-adapter/: Cargo.toml
fust-adapter/src/: filesystem_adapter.rs  lib.rs  repositories.rs  services.rs
fust-adapter/tests/: filesystem_adapter_tests.rs
fust-application/: Cargo.toml
fust-application/src/: lib.rs  list_directories.rs  use_cases.rs
fust-application/tests/: list_directories_tests.rs
fust-cli/: Cargo.toml
fust-cli/src/: cli_adapter.rs  commands.rs  config.rs  error.rs  main.rs
fust-cli/tests/: fud_integration_tests.rs
fust-domain/: Cargo.toml
fust-domain/src/: entities.rs  errors.rs  fs_errors.rs  lib.rs  metadata.rs  services.rs  value_objects.rs
fust-domain/src/services/: directory_service.rs
fust-domain/tests/: directory_service_tests.rs  metadata_tests.rs
fust-port/: Cargo.toml
fust-port/src/: file_system.rs  lib.rs  repositories.rs  services.rs
fust-port/tests/: file_system_tests.rs
