[workspace]
members = [
    "fust-cli",
    "fust-domain", 
    "fust-application",
    "fust-port",
    "fust-adapter"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Leo Noriega <leonoriega100@gmail.com>"]
description = "A modern CLI application built with Rust following clean architecture principles"
license = "MIT"
repository = "https://github.com/Leo-Noriega/fust"
keywords = ["cli", "terminal", "productivity", "rust"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.28", features = ["fs", "macros", "rt-multi-thread"] }

# CLI and TUI
ratatui = "0.24"
skim = "0.10"

# Git integration
git2 = "0.17"

# Configuration management
confy = "0.6"

# Clipboard support
arboard = "2.0"

# Testing utilities
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Path handling
pathdiff = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System directories
dirs = "5.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Development dependencies
mockall = "0.11"
