[package]
name = "fust-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "External adapters and implementations"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
fust-domain = { path = "../fust-domain" }
fust-port = { path = "../fust-port" }

# External dependencies
tokio = { workspace = true }
git2 = { workspace = true }
confy = { workspace = true }
arboard = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits
async-trait = "0.1"

# Development dependencies
mockall = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true } 